feat: add remove radar feature
