# src-be/tsoa-build/swagger.json
@@ -249,6 +249,25 @@
 						}
 					}
 				}
+			},
+			"delete": {
+				"operationId": "DeleteRadar",
+				"responses": {
+					"204": {
+						"description": "No content"
+					}
+				},
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "radarId",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				]
 			}
 		}
 	},
